--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "vue": "^2.5.17"
     },
     "dependencies": {
-        "vue-template-compiler": "^2.6.11"
+        "@fortawesome/fontawesome-free": "^5.13.1",
+        "vue-template-compiler": "^2.6.11",
+        "@fortawesome/fontawesome-free":"^5.6.3"
     }
 }
